autoplay working update

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <meta name="Description" content="TV Station application">
   <base href="/">
+  <script src="https://www.youtube.com/iframe_api"></script>
 
   <style>
     html,
@@ -32,6 +33,7 @@
   <script type="module">
     import "./src/tv-app.js";
     import "./src/tv-channel.js";
+    
     const tvApp = document.getElementsByName("tv-app.js");
 
     
